<resources>
    <string name="app_name">Locutus</string>
    <string name="create_profile">Création d\'un nouveau profil</string>
    <string name="select_profile">Choisir un profil</string>
    <string name="preferences">Préférences</string>
    <string name="help">Aide</string>
    <string name="about_locutus">A propos de Locutus</string>
    <string name="welcome_to_locutus">Bienvenue sur Locutus !</string>
    <string name="about_locutus_text">TextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextextTextextextext</string>
    <string name="back_home">Retour au menu principal</string>
    <string name="help_text">Help</string>
    <string name="exit">Quitter l\'application</string>
    <string name="concept_management">Gestion des concepts</string>
    <string name="tree_management">Gestion des arborescences</string>
    <string name="back">Retour</string>
    <string name="last_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="select_voice">Choix de la voix</string>
    <string name="child">Enfant</string>
    <string name="woman">Femme</string>
    <string name="man">Homme</string>
    <string name="max_frames_per_display">Nombre d\'images maximales par affichage</string>
    <string name="scrolling_speed">Vitesse de défilement</string>
    <string name="confirm">Valider</string>
    <string name="please_fill_all_fields">Veuillez remplir tous les champs</string>
    <string name="profile_saved">Profil sauvegardé</string>
    <string name="profiles">Profils</string>
    <string name="picto_and_pictures">Pictogrammes et images</string>
    <string name="picto_only">Pictogrammes seuls</string>
    <string name="trees">Arborescences</string>
    <string name="general_settings">Options générales</string>
    <string name="scrolling_settings">Défilement</string>
    <string name="frame_settings">Cadres</string>
    <string name="applications_launcher">Lancer des applications</string>
    <string name="default_user">Utilisateur par défaut de l\'application</string>
    <string name="scrolling">Défilement</string>
    <string name="tactile">Tactile</string>
    <string name="default_user_mode">Mode d\'utilisation par défaut</string>
    <string name="sound_feedback">Retour sonore</string>
    <string name="frame_style">Style</string>
    <string name="highlighting">Surbrillance</string>
    <string name="redlight">Lampe rouge</string>
    <string name="classic">Classique</string>
    <string name="checkerboard">Damier</string>
    <string name="size">Taille</string>
    <string name="intensity">Intensité</string>
    <string name="frame_color">Couleur</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_black">Noir</string>
    <string name="color_yellow">Jaune</string>
    <string name="color_green">Vert</string>
    <string name="color_pink">Rose</string>
    <string name="tree_choice">Arborescence du profil</string>
    <string name="choose_tree">Choisir une arborescence</string>
    <string name="change_tree">Changer l\'arborescence</string>
    <string name="year_of_birth">Année de naissance</string>
    <string name="profile_title">%s %s (%d ans)</string>
    <string name="please_fill_correct_year">Veuillez entrer une année de naissance entre 1920 et l\'année en cours</string>
    <string name="please_enter_unexisting_profile">Ce profil existe déjà</string>
    <string name="delete_profile">Supprimer le profil</string>
    <string name="confirm_deletion">Voulez-vous supprimer ce profil?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="profile_deleted">Profil supprimé</string>
    <string name="create_concept">Création d\'un nouveau concept</string>
    <string name="concept_name">Nom du concept (* : champs requis)</string>
    <string name="please_fill_required_fields">Veuillez remplir les champs requis</string>
    <string name="please_enter_unexisting_concept">Ce concept existe déjà</string>
    <string name="concept_saved">Concept sauvegardé</string>
    <string name="delete_concept">Supprimer le concept</string>
    <string name="set_concept_picto">Modifier l\'image de communication</string>
    <string name="set_concept_sound">Modifier le son du concept</string>
    <string name="set_concept_name">Modifier le nom du concept</string>
    <string name="add_picto">Ajouter une image de communication *</string>
    <string name="add_sound">Ajouter un son *</string>
    <string name="add_picture">Ajouter une image associée</string>
    <string name="add_existing_image">Ajouter une image existante</string>
    <string name="do_you_prefere">Préférez-vous :</string>
    <string name="import_image">Importer une image</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="picto">Image de communication</string>
    <string name="picture_load_fail">Echec du chargement de l\'image</string>
    <string name="care_with_big_images">Merci de ne pas importer d\'image trop volumineuse</string>
    <string name="add_existing_sound">Ajouter un son existent</string>
    <string name="import_sound">Importer un son</string>
    <string name="capture_sound">Enregistrer un son</string>
    <string name="button_select">Choisir</string>
    <string name="button_play">Jouer</string>
    <string name="resource_load_fail">Echec du chargement de la ressource</string>
    <string name="record">Enregistrer</string>
    <string name="stop_record">Fin de l\'enregistrement</string>
    <string name="play_record">Jouer l\'enregistrement</string>
    <string name="play_recorded">Jouer l\'enregistrement</string>
    <string name="save_record">Sauvegarder l\'enregistrement</string>
    <string name="recording_complete">Enregistrement terminé</string>
    <string name="concept_click_long_click">Reste appuyé pour accéder au concept et à ses options</string>
    <string name="confirm_concept_deletion">Voulez-vous vraiment supprimer ce concept ?</string>
    <string name="concept_deleted">Concept supprimé</string>
    <string name="resources_management">Gestion des ressources</string>
    <string name="delete">Supprimer</string>
    <string name="select_concepts">Choisir les concepts</string>
    <string name="concept_count">Nombre de concepts : %d/%d</string>
    <string name="at_least_one_concept">Veuillez choisir au moins un concept</string>
    <string name="create_tree">Création d\'une nouvelle arborescence</string>
    <string name="no_picture">Pas d\'image disponible. Cliquez pour en ajouter une</string>
</resources>
