<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.CreateProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/create_profile"
        android:textColor="@color/primary_strong"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_new_profile_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_new_profile_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_new_profile_year_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/year_of_birth"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="newProfileConfirm"
            android:text="@string/confirm"
            android:textColor="@color/primary_strong" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_strong"
            android:onClick="back"
            android:text="@string/back_home"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>