<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/welcome_to_locutus"
        android:textColor="@color/primary_strong"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:backgroundTint="@color/white"
        android:onClick="gotoProfiles"
        android:text="@string/profiles"
        android:textColor="@color/primary_strong" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="gotoConceptManagement"
            android:text="@string/concept_management"
            android:textColor="@color/primary_strong" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="gotoTreeManagement"
            android:text="@string/tree_management"
            android:textColor="@color/primary_strong" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="gotoHelp"
            android:text="@string/help"
            android:textColor="@color/primary_strong" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_strong"
            android:onClick="exit"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>