<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.AudioCaptureActivity">

    <Button
        android:id="@+id/button_start_recording"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/record"
        android:textColor="@color/primary_strong" />

    <Button
        android:id="@+id/button_stop_recording"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/stop_record"
        android:textColor="@color/primary_strong" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/play_recorded"
        android:textColor="@color/primary_strong" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/primary_strong"
        android:text="@string/save_record"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>