<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.HelpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/help"
        android:textColor="@color/primary_strong"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:text="@string/help_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:backgroundTint="@color/primary_strong"
        android:onClick="back"
        android:text="@string/back_home"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>